# advent-of-code-solutions

./: .gitignore  README.md  pyproject.toml
day_1/: README.md  part_1.py  part_2.py
day_10/: common.py  part_1.py  part_2.py
day_11/: part_1.py  part_2.py
day_2/: README.md  common.py  part_1.py  part_2.py
day_3/: README.md  common.py  part_1.py  part_2.py
day_4/: README.md  common.py  part_1.py  part_2.py
day_5/: part_1.py  part_2.py
day_6/: part_1.py  part_2.py
day_7/: part_1.py  part_2.py
day_8/: part_1.py  part_2.py
day_9/: part_1.py
tests/: test_d1p1.py  test_d1p2.py  test_d2p1.py  test_d2p2.py  test_d3p1.py  test_d3p2.py  test_d4p1.py  test_d4p2.py
