[tool.poetry]
name = "advent-of-code-solutions"
version = "0.1.0"
description = ""
authors = ["bitizen248 <van4011@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

